--- a/w7_assignment/index.html
+++ b/w7_assignment/index.html
@@ -7,11 +7,26 @@
     <title>Remote SIte Page</title>
 </head>
 <body>
+    <div style="background-color: grey;">
     <H1>This is the <i>Remote </i>site page For the <span style="color: blue;"> <b>BEST </b></span>Company</H1>
     <p>If you are here and dont know what to do.... <i>LEAVE</i></p>
-    <a href="index.html" ><img src=images/BRj_logo.png></a>
-    <a href="remote.html" class="link">Remote Info</a>
-    <a href="test.html" class="link">Testing page</a>
-    
+
+    <ul>
+        <li><a href="index.html"><img src=images/BRj_logo.png></a></li>
+        <li><a href="remote.html">Remote</a></li>
+        <li><a href="T.html">Info Page</a></li>
+      </ul>
+    </div>
+    <div style="background-color: antiquewhite;">
+        <p>This is the remote site for BRJ CPUS any and all access is monitored and logged. Unauthorized access keep out!</p>
+        <ol>
+            <ul>Authorized Users</ul>
+
+            <li>Rimsha</li>
+            <li>Jordan</li>
+            <li>Brett</li>
+        </ol>
+
+    </div>
 </body>
 </html>
