--- a/w7_assignment/remote.html
+++ b/w7_assignment/remote.html
@@ -21,7 +21,7 @@
 
             <a href="index.html" ><img src=images/BRj_logo.png></a>
             <a href="remote.html" class="link">Remote Page</a>
-            <a href="test.html" class="link">Test Page</a>
+            <a href="T.html" class="link">Info</a>
             <a href="#footer" class="link">Bottom of page</a>
             
 
